# analiz_bankovskikh_operatsii

./: .env_template  .flake8  .gitignore  README.md  pyproject.toml
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: __init__.py  conftest.py  test_api.py  test_fix.py  test_main.py  test_reports.py  test_services.py  test_utils.py  test_views.py
